# visions-vertex

./: .aiexclude  .geminiignore  .gitignore  GEMINI.md  Makefile  Makefile.mk  README.md  cloudbuild.yaml  deployment_metadata.json  lint.sh  plan.md  pyproject.toml  requirements.txt  run_agent.py  starter_pack_README.md  starter_pack_pyproject.toml
.idx/: dev.nix
app/: agent.py  agent_engine_app.py
app/utils/: deployment.py  gcs.py  tracing.py  typing.py
deployment/terraform/: build_triggers.tf  providers.tf  service.tf  storage.tf  variables.tf
deployment/terraform/dev/: providers.tf  variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
notebooks/: adk_app_testing.ipynb
tests/integration/: test_agent_engine_app.py
tests/load_test/: load_test.py
